--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,14 +3,28 @@
 body{
     font-family: 'Roboto Condensed', sans-serif;
     width:100%;
+    padding:0px;
+    margin:0px;
+    background-color: rgb(235, 202, 142);
 }
 
 h1,h2,h3{
     font-family: 'Amatic SC', cursive;
-    font-size:2rem;
     color: sienna;
 } 
 
+h1{
+    font-size: 2.5em;
+}
+
+h2{
+    font-size: 2em;
+}
+
+h3{
+    font-size: 1.5em;
+    opacity: .75;
+}
 
 header{
     display: flex;
@@ -19,6 +33,8 @@ header{
     flex-wrap: wrap;
     align-items: center; 
     padding:2vw 5vw;
+    background-color: rgb(216, 179, 109);
+    border-bottom: sienna 5px solid;
 }
 
 nav{
@@ -27,10 +43,14 @@ nav{
     flex-wrap: wrap;
 }
 
+nav a{
+    margin-right: 3vw;
+}
+
+
  a{
     text-decoration: none;
-    color: grey;
-    margin-right: 3vw;
+    color: sienna;
 }
 
  a:hover{
@@ -45,6 +65,10 @@ main{
     width: 70%;
     margin:0 auto;
     text-align: center;
+}
+
+section{
+    margin-bottom: 45px;
 }
 
 .Container_for_all_classes{
@@ -72,6 +96,18 @@ footer{
     justify-content: space-between;
     text-align: center;
 }
+
+
+.Plinks{ 
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    text-align: center;
+    width: 40%;
+    margin:0 auto;
+}
+
 
 .project_container{
     width: 48%;
